# docs/swagger.yaml
@@ -173,34 +173,6 @@ paths:
       summary: get price by Token via Binance API
       tags:
       - token
-  /token/price-by-advance/{token}/{currency}:
-    get:
-      parameters:
-      - description: token
-        in: path
-        name: token
-        type: string
-      - description: currency
-        in: path
-        name: currency
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            type: HTTPError
-      summary: get price by Token via Binance API
-      tags:
-      - token
   /token/price-by-currency/{token}/{currency}:
     get:
       parameters:
