# main.go
@@ -6,6 +6,7 @@ import (
 	"launchpad_service/controller"
 	_ "launchpad_service/docs"
 	_ "net/http/pprof"
+	"time"
 )
 
 // @title Swagger Launchpad Service API
@@ -22,6 +23,8 @@ import (
 
 // @BasePath /
 func main() {
+	go controller.DoEvery(2 *time.Second, controller.GetPriceAndUpdateList)
+
 		server := echo.New()
 
 		launchpad := server.Group("/launchpad")
@@ -40,8 +43,6 @@ func main() {
 			token.GET("/klines/:token/:interval", controller.GetKlines)
 			token.GET("/transaction/:hash", controller.GetTransaction)
 			token.GET("/price-by-currency/:token/:currency", controller.GetPriceByCurrency)
-			token.GET("/price-by-advance/:token/:currency", controller.GetPriceAdvance)
-
 		}
 
 		server.GET("/swagger/*", echoSwagger.WrapHandler)
